new collection idea

--- a/app/views/prototypes/collection/add-staff.html
+++ b/app/views/prototypes/collection/add-staff.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Enter your staff and their email address
+  Enter your staff names and email addresses
 </h1>
 
             
