--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -38,22 +38,22 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add all your staff details into this service
+          Add all your staff details into this service yourself
         </label>
       </div><br><br>
 
-      <h2 class="govuk-heading-m">Or tell us your staff email addresses and we will send them a link to a portal to add their own details</h2>
+      <h2 class="govuk-heading-m">Add your staff names and email addresses and we will send them a link to a portal to complete their own details</h2>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Add your staff email addresses by entering them into this service
+          Add staff emails by entering them into this service
         </label>
       </div>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file from your own system - with their names and email addresses
+          Upload a file - with their names and email addresses
         </label>
       </div>
 
