--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds"><br>
       <h1 class="govuk-heading-xl">
         FE staff data collection
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
