new collection idea

--- a/app/views/prototypes/collection/staff-list.html
+++ b/app/views/prototypes/collection/staff-list.html
@@ -142,7 +142,7 @@
         </dl>
 
 
-          <a href="#" class="govuk-button show-continue" >
+          <a href="start-staff" class="govuk-button show-continue" >
       Submit
     </a>
        
