new collection idea

--- a/app/views/prototypes/collection/home.html
+++ b/app/views/prototypes/collection/home.html
@@ -17,7 +17,7 @@
 
        
 
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters"><br>
             
    
         
