--- a/app/views/prototypes/collection/details.html
+++ b/app/views/prototypes/collection/details.html
@@ -16,7 +16,7 @@
 
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-grid-column-two-thirds"><br>
         <h1 class="govuk-heading-xl">Sign in</h1>
 
             </div>
