--- a/app/views/prototypes/collection/done-list.html
+++ b/app/views/prototypes/collection/done-list.html
@@ -24,11 +24,11 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  You have added 5 staff 
+  You have 5 staff 
 </h1>
 
             
-<div class="govuk-inset-text"></div>
+<!--<div class="govuk-inset-text"></div>-->
 
 
 
@@ -124,22 +124,6 @@
 
 </fieldset>
 
-<dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
-              
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="add-staff">
-                Add more staff<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-
-        </dl>
 
 
           <a href="start-staff" class="govuk-button show-continue" >
