--- a/app/views/prototypes/collection/hello.html
+++ b/app/views/prototypes/collection/hello.html
@@ -19,7 +19,7 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-        <h1 class="govuk-heading-xl">FE staff details - self service collection</h1>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1>
         <span class="govuk-caption-xl">John Vincent Adams</span><br>
 
        <!-- <p class="govuk-body">You need to tell us about the people you employ - each year.</p>-->
@@ -28,7 +28,7 @@
       
 
 
-          <a href="dob" class="govuk-button show-continue" style="display: inline;">
+          <a href="questions" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
         
