--- a/app/views/prototypes/collection/questions.html
+++ b/app/views/prototypes/collection/questions.html
@@ -19,23 +19,29 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-        <h1 class="govuk-heading-xl">FE staff collection</h1>
-        <span class="govuk-caption-xl">August 2020 to September 2021</span><br>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1><br>
+  
 
-       <!-- <p class="govuk-body">You need to tell us about the people you employ - each year.</p>-->
-
-        
-        
-
-        
-
-    <a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  My organisation details
+    <a href="dob" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  About you
 </button></a><br>
 
 <a href="choose" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  My staff details
-</button></a>
+  Your career in FE
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Your qualifications
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Subject taught
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Your contract
+</button></a><br>
+
 
         
 
