new collection idea

--- a/app/views/prototypes/collection/answers-staff.html
+++ b/app/views/prototypes/collection/answers-staff.html
@@ -70,6 +70,34 @@
               </a>
             </dd>
           </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Disability
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="two">
+                Change<span class="govuk-visually-hidden"> Disability</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Nationality
+            </dt>
+            <dd class="govuk-summary-list__value">
+              British
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="two">
+                Change<span class="govuk-visually-hidden"> Nationality</span>
+              </a>
+            </dd>
+          </div>
           
         
 
