--- a/app/views/prototypes/collection/disability.html
+++ b/app/views/prototypes/collection/disability.html
@@ -26,55 +26,31 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is your ethnic group?
+        Do you have a disablity?
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          Asian or Asian British
+          Yes
         </label>
         <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+          
         </span>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          Black, African, Black British or Caribbean
+          No
         </label>
         <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Black background
+          
         </span>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Mixed or multiple ethnic groups
-        </label>
-        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Mixed background
-        </span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
-          White
-        </label>
-        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any White background
-        </span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
-          Another ethnic group
-        </label>
-        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any other ethnic group, for example, Arab
-        </span>
-      </div>
+      
+      
+      
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
@@ -87,7 +63,7 @@
 </div>
 
 
-          <a href="disability" class="govuk-button show-continue" style="display: inline;">
+          <a href="nationality" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
