--- a/app/views/prototypes/collection/hello.html
+++ b/app/views/prototypes/collection/hello.html
@@ -16,66 +16,53 @@
       <a href="#" class="govuk-back-link">Back</a>
  
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <h1 class="govuk-heading-m">John Vincent Adams
+  <span class="govuk-caption-m">Impact Training Limited</span></h1>
 
-        <h1 class="govuk-heading-xl">John Vincent Adams</h1>
-        <span class="govuk-caption-xl">John Vincent Adams</span><br>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1><br>
+  
 
-       <!-- <p class="govuk-body">You need to tell us about the people you employ - each year.</p>-->
+    <a href="dob" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  About you
+</button></a><br>
+
+<a href="choose" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Your career in FE
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Your qualifications
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Subject taught
+</button></a><br>
+
+<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Your contract
+</button></a><br><br>
+
+
+        
+
+        
 
         
       
-
 
           <a href="questions" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
         
 
-        
+        </div>
 
         
       </div>
 
-     <!-- <div class="govuk-grid-column-one-third">
-
-        The Related items component is not part of GOV.UK Frontend but will be styled if used in the Prototype Kit
-
-        <aside class="app-related-items" role="complementary">
-          <h2 class="govuk-heading-m" id="subsection-title">
-            My Account
-          </h2>
-          <nav role="navigation" aria-labelledby="subsection-title">
-            <ul class="govuk-list govuk-!-font-size-16">
-              <li>
-                <a class="govuk-link" href="#">
-                  View my own staff data
-                </a>
-              </li>
-              <li>
-                <a class="govuk-link" href="#">
-                  View national staff data
-                </a>
-              </li>
-
-              <li>
-                <a class="govuk-link" href="#">
-                  My profile
-                </a>
-              </li>
-              <li>
-                <a href="#" class="govuk-link govuk-!-font-weight-bold">
-                  More <span class="govuk-visually-hidden">in Subsection</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </aside>
-
-      </div>-->
+     
     </div>
-  </main>
+  
 
 
 {% endblock %}
