--- a/app/views/prototypes/collection/nationality.html
+++ b/app/views/prototypes/collection/nationality.html
@@ -26,23 +26,23 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is your ethnic group?
+        What is your nationality?
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
-          Asian or Asian British
+          Something
         </label>
         <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+          Includes Bangladeshi, Chinese, Indian, Pakistani
         </span>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          Black, African, Black British or Caribbean
+          Something
         </label>
         <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
           Includes any Black background
@@ -51,7 +51,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Mixed or multiple ethnic groups
+          Something
         </label>
         <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
           Includes any Mixed background
@@ -60,7 +60,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
-          White
+          Something
         </label>
         <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
           Includes any White background
@@ -69,7 +69,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
-          Another ethnic group
+          Something
         </label>
         <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
           Includes any other ethnic group, for example, Arab
@@ -87,7 +87,7 @@
 </div>
 
 
-          <a href="disability" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
