--- a/app/views/prototypes/collection/questions.html
+++ b/app/views/prototypes/collection/questions.html
@@ -16,8 +16,8 @@
       <a href="#" class="govuk-back-link">Back</a>
  
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <h1 class="govuk-heading-m">John Vincent Adams
+  <span class="govuk-caption-m">Impact Training Limited</span></h1>
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1><br>
   
