new collection idea

--- a/app/views/prototypes/collection/hello.html
+++ b/app/views/prototypes/collection/hello.html
@@ -50,9 +50,9 @@
         
       
 
-          <a href="questions" class="govuk-button show-continue" style="display: inline;">
+          <!--<a href="questions" class="govuk-button show-continue" style="display: inline;">
       Continue
-    </a>
+    </a>-->
         
 
         </div>
