--- a/app/views/prototypes/collection/answers-staff.html
+++ b/app/views/prototypes/collection/answers-staff.html
@@ -16,11 +16,11 @@
       <a href="#" class="govuk-back-link">Back</a>
  
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <h1 class="govuk-heading-m">John Vincent Adams
+  <span class="govuk-caption-m">Impact Training Limited</span></h1><br>
 
         
-        <span class="govuk-caption-xl">John Vincent Adams</span><br>
+        
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
         
