--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -19,7 +19,7 @@
   <h1 class="govuk-heading-m">John Vincent Adams
   <span class="govuk-caption-m">Impact Training Limited</span></h1>
 
-        <h1 class="govuk-heading-xl">Answer questions</h1><br>
+        <h1 class="govuk-heading-xl">Answer questions</h1>
 
 
         <nav role="navigation">
@@ -27,6 +27,54 @@
     
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="dob">About you</a>
+        
+          <p class="browse-list-item-body">
+            eg web hosting or IT health checks
+          </p>
+        
+        
+          <!--<p class="browse-list-item-subtext">
+            Procurement framework: <a href="#">G-Cloud</a>
+          </p>-->
+        
+        
+      </li>
+    
+      <li class="browse-list-item">
+        <a class="browse-list-item-link" href="#nope">Your time in Further Education</a>
+        
+        
+          <p class="browse-list-item-subtext">
+            Procurement framework: <a href="#"></a>
+          </p>
+        
+        
+      </li>
+    
+      <li class="browse-list-item">
+        <a class="browse-list-item-link" href="#nope">Your qualifications</a>
+        
+          <p class="browse-list-item-body">
+            Find applications or services that are run over the internet or in the cloud
+          </p>
+        
+        
+          
+        
+        
+      </li>
+    
+  </ul>
+</nav>
+  
+
+  
+
+<nav role="navigation">
+  <ul class="browse-list">
+    
+      <li class="browse-list-item">
+        <a class="browse-list-item-link" href="https://www.gov.uk">Subject taught</a>
         
           <p class="browse-list-item-body">
             eg web hosting or IT health checks
@@ -41,7 +89,7 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Find specialists to work on digital projects to work on digital projects to work on digital projects to work on digital projects</a>
+        <a class="browse-list-item-link" href="#nope">Your contract</a>
         
         
           <p class="browse-list-item-subtext">
@@ -51,26 +99,15 @@
         
       </li>
     
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Software as a Service</a>
-        
-          <p class="browse-list-item-body">
-            Find applications or services that are run over the internet or in the cloud
-          </p>
-        
-        
-          <p class="browse-list-item-subtext">
-            eg accounting, email
-          </p>
-        
-        
-      </li>
+      
     
   </ul>
 </nav>
-  
 
-    <a href="dob" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+
+        
+
+       <a href="dob" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
   About you
 </button></a><br>
 
@@ -88,59 +125,7 @@
 
 <a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
   Your contract
-</button></a><br><br>
-
-<nav role="navigation">
-  <ul class="browse-list">
-    
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" href="https://www.gov.uk">Find cloud technology and support</a>
-        
-          <p class="browse-list-item-body">
-            eg web hosting or IT health checks
-          </p>
-        
-        
-          <p class="browse-list-item-subtext">
-            Procurement framework: <a href="#">G-Cloud</a>
-          </p>
-        
-        
-      </li>
-    
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Find specialists to work on digital projects to work on digital projects to work on digital projects to work on digital projects</a>
-        
-        
-          <p class="browse-list-item-subtext">
-            Procurement framework: <a href="#">Digital Services</a>
-          </p>
-        
-        
-      </li>
-    
-      <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Software as a Service</a>
-        
-          <p class="browse-list-item-body">
-            Find applications or services that are run over the internet or in the cloud
-          </p>
-        
-        
-          <p class="browse-list-item-subtext">
-            eg accounting, email
-          </p>
-        
-        
-      </li>
-    
-  </ul>
-</nav>
-
-
-        
-
-        
+</button></a><br><br> 
 
         
       
