--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -172,3 +172,130 @@ $govuk-assets-path: '/govuk/assets/';
     min-height: auto;
   }
 }
+
+.browse-list {
+  padding: 0; }
+
+.browse-list-item {
+  list-style: none;
+  margin-bottom: 30px; }
+
+.browse-list-item-link {
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 18px;
+  line-height: 1.2;
+  display: block;
+  padding-top: 9px;
+  padding-bottom: 6px;
+  font-weight: bold;
+  text-decoration: none; }
+  @media (min-width: 641px) {
+    .browse-list-item-link {
+      font-size: 24px;
+      line-height: 1.25; } }
+  @media (min-width: 641px) {
+    .browse-list-item-link {
+      padding-top: 6px;
+      padding-bottom: 4px; } }
+
+.browse-list-item-body {
+  margin: 0;
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 1.25; }
+  @media (min-width: 641px) {
+    .browse-list-item-body {
+      font-size: 19px;
+      line-height: 1.31579; } }
+
+.browse-list-item-subtext {
+  margin: 0;
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 14px;
+  line-height: 1.14286;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  color: #6f777b; }
+  @media (min-width: 641px) {
+    .browse-list-item-subtext {
+      font-size: 16px;
+      line-height: 1.25; } }
+  @media (min-width: 641px) {
+    .browse-list-item-subtext {
+      padding-top: 5px;
+      padding-bottom: 5px; } }
+
+.browse-list-item-status-quiet, .browse-list-item-status-default, .browse-list-item-status-happy, .browse-list-item-status-angry {
+  border-left: 5px solid;
+  padding-left: 15px;
+  margin: 10px 0 0 0;
+  padding-bottom: 0 0 10px 0;
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 700;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 1.25; }
+  @media (min-width: 641px) {
+    .browse-list-item-status-quiet, .browse-list-item-status-default, .browse-list-item-status-happy, .browse-list-item-status-angry {
+      font-size: 19px;
+      line-height: 1.31579; } }
+  .browse-list-item-status-quiet .browse-list-item-status-title, .browse-list-item-status-default .browse-list-item-status-title, .browse-list-item-status-happy .browse-list-item-status-title, .browse-list-item-status-angry .browse-list-item-status-title {
+    margin: 0; }
+  .browse-list-item-status-quiet .browse-list-item-status-hint, .browse-list-item-status-default .browse-list-item-status-hint, .browse-list-item-status-happy .browse-list-item-status-hint, .browse-list-item-status-angry .browse-list-item-status-hint {
+    font-family: "nta", Arial, sans-serif;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #6f777b;
+    margin: 0; }
+    @media (min-width: 641px) {
+      .browse-list-item-status-quiet .browse-list-item-status-hint, .browse-list-item-status-default .browse-list-item-status-hint, .browse-list-item-status-happy .browse-list-item-status-hint, .browse-list-item-status-angry .browse-list-item-status-hint {
+        font-size: 19px;
+        line-height: 1.31579; } }
+  .browse-list-item-status-quiet .browse-list-item-status-list, .browse-list-item-status-default .browse-list-item-status-list, .browse-list-item-status-happy .browse-list-item-status-list, .browse-list-item-status-angry .browse-list-item-status-list {
+    font-family: "nta", Arial, sans-serif;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 16px;
+    line-height: 1.25;
+    list-style: disc;
+    padding: 0 0 0 20px; }
+    @media (min-width: 641px) {
+      .browse-list-item-status-quiet .browse-list-item-status-list, .browse-list-item-status-default .browse-list-item-status-list, .browse-list-item-status-happy .browse-list-item-status-list, .browse-list-item-status-angry .browse-list-item-status-list {
+        font-size: 19px;
+        line-height: 1.31579; } }
+
+.browse-list-item-status-quiet {
+  font-family: "nta", Arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #6f777b;
+  border-color: #bfc1c3; }
+  @media (min-width: 641px) {
+    .browse-list-item-status-quiet {
+      font-size: 19px;
+      line-height: 1.31579; } }
+
+.browse-list-item-status-default {
+  color: #0b0c0c;
+  border-color: #bfc1c3; }
+
+.browse-list-item-status-happy {
+  color: #00823b; }
+
+.browse-list-item-status-angry {
+  color: #b10e1e; }
+
+.grid-row:after, .notice:after, .question:after, .question-first:after, .panel:after, fieldset:after, .form-section:after, .form-group:after, .form-block:after, .validation-wrapper:after, .message-wrapper:after {
+  content: "";
+  display: block;
+  clear: both; }
