--- a/app/views/prototypes/collection/start-intro.html
+++ b/app/views/prototypes/collection/start-intro.html
@@ -12,12 +12,10 @@
 
 
 
-
+  
   
 
-
-    
-        <div class="govuk-width-container">
+      <div class="govuk-width-container">
   <div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
@@ -33,19 +31,21 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Service name goes here</h1>
+        <h1 class="govuk-heading-xl">FE staff return</h1>
+        <span class="govuk-caption-l">August 2019 to September 2020</span><br>
 
         <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>do something</li>
-          <li>update your name, address or other details</li>
-          <li>do something else</li>
+          <li>There are two parts to this collection - provider and staff details</li>
+          <li>You can save each section and return as many times as you need to before you submit</li>
+          <li>In the staff section you can choose to upload a file from your own internal system - or add your staff into a form one at a time.</li>
+          
         </ul>
 
         <p class="govuk-body">Registering takes around 5 minutes.</p>
 
-        <a href="one" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+        <a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
@@ -92,11 +92,7 @@
 
       </div>
     </div>
-  
-</div>
+  </main>
 
-
-
-    </main>
 
 {% endblock %}
