--- a/app/views/prototypes/collection/vacancies.html
+++ b/app/views/prototypes/collection/vacancies.html
@@ -66,7 +66,7 @@
 </fieldset><br><br>
 
 
-          <a href="two" class="govuk-button show-continue" style="display: inline;">
+          <a href="posts" class="govuk-button show-continue" style="display: inline;">
       Save and Continue
     </a>
        
