--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -16,10 +16,10 @@
       <a href="#" class="govuk-back-link">Back</a>
  
 
-  <h1 class="govuk-heading-m">John Vincent Adams
+  <h1 class="govuk-heading-m">Teaching staff
   <span class="govuk-caption-m">Impact Training Limited</span></h1>
 
-        <h1 class="govuk-heading-xl">Answer questions</h1>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
 
         <nav role="navigation">
@@ -29,7 +29,7 @@
         <a class="browse-list-item-link" href="dob">About you</a>
         
           <p class="browse-list-item-body">
-            eg web hosting or IT health checks
+            Personal information about you
           </p>
         
         
@@ -55,11 +55,8 @@
         <a class="browse-list-item-link" href="#nope">Your qualifications</a>
         
           <p class="browse-list-item-body">
-            Find applications or services that are run over the internet or in the cloud
+            Find 
           </p>
-        
-        
-          
         
         
       </li>
@@ -67,33 +64,45 @@
   </ul>
 </nav>
   
-
+<div class="browse-list-item-status-happy">
+              <p class="browse-list-item-status-title">
+                You are submitting
+              </p>
+                <ul class="browse-list-item-status-list">
+                    <li>
+                      teaching qualifications
+                    </li>
+                    <li>
+                      subject qualifications
+                    </li>
+                </ul>
+            </div><br>
   
 
 <nav role="navigation">
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="https://www.gov.uk">Subject taught</a>
+        <a class="browse-list-item-link" href="#">The subjects you teach</a>
         
           <p class="browse-list-item-body">
-            eg web hosting or IT health checks
+            Something here
           </p>
         
         
           <p class="browse-list-item-subtext">
-            Procurement framework: <a href="#">G-Cloud</a>
+            OMG <a href="#">something</a>
           </p>
         
         
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Your contract</a>
+        <a class="browse-list-item-link" href="#nope">About your contract</a>
         
         
           <p class="browse-list-item-subtext">
-            Procurement framework: <a href="#">Digital Services</a>
+            Something <a href="#">Services</a>
           </p>
         
         
@@ -103,30 +112,6 @@
     
   </ul>
 </nav>
-
-
-        
-
-       <a href="dob" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  About you
-</button></a><br>
-
-<a href="choose" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Your career in FE
-</button></a><br>
-
-<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Your qualifications
-</button></a><br>
-
-<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Subject taught
-</button></a><br>
-
-<a href="one" button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Your contract
-</button></a><br><br> 
-
         
       
 
