new collection idea

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,7 +43,10 @@
 
 
 
-      <h2 class="govuk-heading-s">Sprint three</h2><br><br>
+      <h2 class="govuk-heading-s">Sprint three</h2>
+
+      <p>Combination of upload and staff self service - <a href="/prototypes/upload/details">Combination concept</a>
+      </p><br><br>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
