new collection idea

--- a/app/views/prototypes/upload/staff-list.html
+++ b/app/views/prototypes/upload/staff-list.html
@@ -32,7 +32,7 @@
 
 
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-2">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               John Vincent Adams
@@ -47,7 +47,7 @@
 
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
-                Edit Remove<span class="govuk-visually-hidden"> name</span>
+                Edit</a> <a class="#" href="one-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -55,7 +55,7 @@
           
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Julie Angelo
@@ -68,7 +68,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="staff-revisit">
-                Edit Remove<span class="govuk-visually-hidden"> name</span>
+                Edit</a><a class="govuk-link" href="staff-revisit">Remove <span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -78,7 +78,7 @@
 
          
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Kam Balachandra
@@ -90,15 +90,16 @@
               01.11.1989
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="posts-revisit">
-                Edit<span class="govuk-visually-hidden"> name</span>
+              <a class="#" href="posts-revisit">
+                Edit</a>
+                <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
-        </dl><br>
+        </dl>
 
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Bernie O'Donnell
@@ -110,28 +111,28 @@
               11.02.1979
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="percentage">
-                Remove<span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="#">
+                Edit Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
 
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Jane Francesca Walthemstow- Bennett
+             Jane Francesca Walthemstow
             </dt>
             <dd class="govuk-summary-list__value">
-              jwalthemstowbennett@impact-training.com
+              jwalthemstow@impact-training.com
             </dd>
             <dd class="govuk-summary-list__value">
               29.06.1996
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="percentage">
-                Remove<span class="govuk-visually-hidden"> name</span>
+                Edit Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -141,26 +142,11 @@
 
 </fieldset>
 
-<dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             
-            </dt>
-            <dd class="govuk-summary-list__value">
-              
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="add-staff">
-                Add more staff<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-
-        </dl>
+<p class="govuk-table__cell--numeric"><a class="#" href="#">Add more staff</a> </p><br>
 
 
           <a href="start-staff" class="govuk-button show-continue" >
-      Submit
+      Save and submit
     </a>
        
       </div>
