new collection idea

--- a/app/views/prototypes/upload/mis.html
+++ b/app/views/prototypes/upload/mis.html
@@ -36,7 +36,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add all your staff details into this service yourself
+          Add your staff details into this service one by one
         </label>
       </div>
 
@@ -51,7 +51,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="#" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a CSV file 
+          Upload a file with basic staff details in this format - we'll send an email link so they can add their own details
         </label>
       </div>
 
