--- a/app/views/prototypes/upload/staff-list.html
+++ b/app/views/prototypes/upload/staff-list.html
@@ -28,7 +28,7 @@
 </h1>
 
             
-<div class="govuk-inset-text">We will send them a link to an online form where they can add more details</div>
+<div class="govuk-inset-text">We will email them a link to a form where they can add more detail</div>
 
 
 
@@ -146,7 +146,7 @@
 
 
           <a href="start-staff" class="govuk-button show-continue" >
-      Save and submit
+      Save
     </a>
        
       </div>
