--- a/app/views/prototypes/upload/staff-list.html
+++ b/app/views/prototypes/upload/staff-list.html
@@ -32,7 +32,7 @@
 
 
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               John Vincent Adams
@@ -42,6 +42,10 @@
             </dd>
             <dd class="govuk-summary-list__value">
               18.08.1991
+            </dd>
+
+            <dd class="govuk-summary-list__value">
+              Email a self service link
             </dd>
 
 
@@ -55,7 +59,7 @@
           
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Julie Angelo
@@ -65,6 +69,10 @@
             </dd>
             <dd class="govuk-summary-list__value">
               05.05.1982
+            </dd>
+
+            <dd class="govuk-summary-list__value">
+              Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="staff-revisit">
@@ -78,7 +86,7 @@
 
          
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Kam Balachandra
@@ -88,6 +96,10 @@
             </dd>
             <dd class="govuk-summary-list__value">
               01.11.1989
+            </dd>
+
+            <dd class="govuk-summary-list__value">
+              Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="#" href="posts-revisit">
@@ -110,6 +122,10 @@
             <dd class="govuk-summary-list__value">
               11.02.1979
             </dd>
+
+            <dd class="govuk-summary-list__value">
+              Email a self service link
+            </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
                 Edit Remove<span class="govuk-visually-hidden"> name</span>
@@ -122,13 +138,17 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Jane Francesca Walthemstow
+             Jane Walthemstow
             </dt>
             <dd class="govuk-summary-list__value">
               jwalthemstow@impact-training.com
             </dd>
             <dd class="govuk-summary-list__value">
               29.06.1996
+            </dd>
+
+            <dd class="govuk-summary-list__value">
+              Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="percentage">
