new collection idea

--- a/app/views/prototypes/upload/staff-list.html
+++ b/app/views/prototypes/upload/staff-list.html
@@ -75,8 +75,9 @@
               Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="staff-revisit">
-                Edit</a><a class="govuk-link" href="staff-revisit">Remove <span class="govuk-visually-hidden"> name</span>
+              <a class="#" href="posts-revisit">
+                Edit</a>
+                <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -127,8 +128,9 @@
               Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Edit Remove<span class="govuk-visually-hidden"> name</span>
+              <a class="#" href="posts-revisit">
+                Edit</a>
+                <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -151,8 +153,9 @@
               Email a self service link
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="percentage">
-                Edit Remove<span class="govuk-visually-hidden"> name</span>
+              <a class="#" href="posts-revisit">
+                Edit</a>
+                <a class="#" href="posts-revisit">Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
