new collection idea

--- a/app/views/prototypes/questions/answers-staff.html
+++ b/app/views/prototypes/questions/answers-staff.html
@@ -113,7 +113,7 @@
 
         </dl>
 
-        <h2 class="govuk-heading-m">Your time in FE</h2>
+        <!--<h2 class="govuk-heading-m">Your time in FE</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -279,12 +279,12 @@
   </main>
 </div>
 
-</fieldset><br>
+</fieldset><br>-->
 
 
-        <!--  <a href="seven" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>-->
+         <a href="hello" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
+    </a>
        
       </div>
     </div>
