--- a/app/views/prototypes/questions/dob.html
+++ b/app/views/prototypes/questions/dob.html
@@ -59,7 +59,7 @@
       </div>
     </div>
   </fieldset>
-</div>
+</div><br>
 
 
           <a href="gender" class="govuk-button show-continue" style="display: inline;">
