--- a/app/views/prototypes/questions/hello.html
+++ b/app/views/prototypes/questions/hello.html
@@ -28,12 +28,12 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="dob">About you</a>
         
-          <p class="browse-list-item-body">
+          <!--<p class="browse-list-item-body">
             Personal information about you
           </p>
         
         
-          <!--<p class="browse-list-item-subtext">
+          <p class="browse-list-item-subtext">
             Procurement framework: <a href="#">G-Cloud</a>
           </p>-->
         
@@ -41,12 +41,12 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Your time in Further Education</a>
+        <a class="browse-list-item-link" href="#nope">Your time in further education</a>
         
         
-          <p class="browse-list-item-subtext">
+          <!--<p class="browse-list-item-subtext">
             Procurement framework: <a href="#"></a>
-          </p>
+          </p>-->
         
         
       </li>
@@ -54,9 +54,9 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#nope">Your qualifications</a>
         
-          <p class="browse-list-item-body">
+          <!--<p class="browse-list-item-body">
             Find 
-          </p>
+          </p>-->
         
         
       </li>
@@ -85,14 +85,14 @@
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="#">The subjects you teach</a>
         
-          <p class="browse-list-item-body">
+          <!--<p class="browse-list-item-body">
             Something here
           </p>
         
         
           <p class="browse-list-item-subtext">
             OMG <a href="#">something</a>
-          </p>
+          </p>-->
         
         
       </li>
@@ -101,9 +101,9 @@
         <a class="browse-list-item-link" href="#nope">About your contract</a>
         
         
-          <p class="browse-list-item-subtext">
+          <!--<p class="browse-list-item-subtext">
             Something <a href="#">Services</a>
-          </p>
+          </p>-->
         
         
       </li>
